obtener la cantidad y buscar el producto en el home controller para añadir al carrito

--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://thymelaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -76,13 +76,12 @@
 
         </div>
       </div>
+    </div> 
     </div>
-    
-      </div>
     <!-- /.container -->
 
  <!-- Footer -->
-    <div th:include="usuario/template_usuario.html::footer"></div>
+    <div th:replace="usuario/template_usuario.html::footer"></div>
 
     <!-- Bootstrap core JavaScript -->
     <script th:src="@{/vendor/jquery/jquery.min.js}"></script>
