--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es" xmlns:th="http://thymelaf.org">
+<html lang="es" xmlns:th="http://www.thymeleaf.org">
 
 <head>
 
@@ -49,10 +49,11 @@
             </div>
             <div class="col-lg-6">
               <form th:action="@{/cart}" method="POST">
+              <input type="hidden" th:value="${producto.id}" name="id">
                 <h2 class="card-title" th:text="${producto.nombre}"></h2>
 
                 <ul class="list-group">
-                  <li class="list-group-item"><h5 th:text=" 'Precio: '+${producto.precio}"></h5></li>
+                  <li class="list-group-item"><h5 th:text=" 'Precio: '+ ${producto.precio}"></h5></li>
                   <li class="list-group-item">
                     <p th:text=" 'Descripción: '+ ${producto.descripcion} "></p>
                   </li>
